# delpi-gui

./: .gitignore  .gitmodules  README.md  launcher.py  main.py  requirements.txt  run_engine.py
app/: main_window.py
app/ui/: advanced_settings.qss  mainwindow.ui  modern_theme.qss
app/widgets/: modification_widget.py
delpi/: .gitignore  LICENSE.txt  README.md  pyproject.toml  requirements.txt
delpi/data/: averagine.parquet  example_param.yaml  sample.fasta
delpi/delpi/: __init__.py  constants.py  run.py
delpi/delpi/chem/: amino_acid.py  atom.py  averagine.py  cleavage.py  composition.py  modification.py  modification_param.py  modified_amino_acid.py  sequence.py  sequence_parser.py  unimod_db.py
delpi/delpi/database/: decoy_generator.py  enzyme.py  fasta_parser.py  modification_handler.py  peptide_database.py  precursor_generator.py  spec_lib_generator.py  spec_lib_reader.py  utils.py
delpi/delpi/database/numba/: prefix_mass_array.py  spec_lib_container.py  spec_lib_utils.py
delpi/delpi/lcms/: base_ion_type.py  base_spectra.py  data_container.py  dda_run.py  dia_run.py  dia_scheme.py  dia_window.py  fragmentation.py  ms1_spectra.py  ms2_spectra.py  ms_binning.py  neutral_loss.py
delpi/delpi/model/: classifier.py  feature_encoder.py  focal_loss.py  input.py  mae_decoder.py  mae_encoder.py  pmsm_scale.py  pnu_loss.py  pos_encoder.py  rt_calibrator.py
delpi/delpi/model/spec_lib/: __init__.py  aa_encoder.py  block.py  dataset.py  ms2_predictor.py  rt_predictor.py
delpi/delpi/search/: base_engine.py  clustering.py  config.py  database.py  protein_group_mapping.py  result_aggregator.py  result_manager.py  rt_align.py  search_manager.py  search_state.py
delpi/delpi/search/dda/: batch_generator.py  engine.py  peak_group.py  peak_token.py
delpi/delpi/search/dia/: batch_generator.py  engine.py  lfq.py  lfq_utils.py  max_lfq.py  peak_group.py  peak_token.py  quick_search.py
delpi/delpi/search/tda/: classfier.py  dataset.py  fdr_analyzer.py  trainer.py
delpi/delpi/search/tl/: data_prep.py  dataset.py  lr_decay.py  numba.py  rt_trainer.py  spec_lib_generator.py  trainer.py
delpi/delpi/utils/: batch_sampler.py  device_ctx.py  down_sampler.py  fdr.py  hdf.py  lightning.py  log_config.py  metric.py  mp.py  numeric.py  peak.py  plot.py  scheduler.py  signal.py  yaml_file.py
delpi/examples/output/: pmsm_results.tsv  protein_group_maxlfq_results.tsv
delpi/models/: delpi.rt_predictor.pth
delpi/pymsio/pymsio/readers/: __init__.py  factory.py  mzml.py  thermo.py
