[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "delpi"
version = "0.9.1"
description = "DelPi: Deep Learning-based Peptide Identification Software"
readme = "README.md"
requires-python = ">=3.12"
license = {text = "MIT"}
authors = [
    {name = "Jungkap Park", email = "jungkap.park@bertis.com"}
]
keywords = ["mass spectrometry", "proteomics", "deep learning", "peptide identification"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Proteomics",
]

dependencies = [
    # PyTorch excluded from dependencies - install separately for GPU/MPS support
    # "torch",
    "torchmetrics>=1.4.2",
    "lightning>=2.5.0",
    "timm==1.0.9",
    "polars[numpy,pandas]==1.34.0",
    "numpy==1.26.4",
    "pandas==2.2.3",
    "pyarrow==18.0.0",
    "scipy==1.14.1",
    "scikit-learn==1.5.2",
    "numba==0.60.0",
    "matplotlib",
    "h5py",
    "tables",
    "tqdm",
    "pyyaml",
    "python-dotenv",
    "psutil",
    "fastaparser",
    "lxml",
    "isal",
    "tabulate",
    "pymsio",
]

[project.optional-dependencies]
# PyTorch CPU version (use only if you don't need CUDA)
torch-cpu = [
    "torch",
]
# For CUDA support, install PyTorch manually first:
# Visit https://pytorch.org/get-started/locally/ for the correct command
test = [
    "pytest",
    "pytest-cov",
]
dev = [
    "pytest",
    "pytest-cov",
    "black",
    "flake8",
    "mypy",
]

[project.scripts]
delpi = "delpi.run:main"

[project.urls]
Homepage = "https://github.com/your-org/delpi"
Repository = "https://github.com/your-org/delpi"
Documentation = "https://delpi.readthedocs.io"

[tool.setuptools.packages.find]
where = ["."]
include = ["delpi*"]
exclude = ["tests*"]

[tool.setuptools.package-data]
delpi = [
    "../data/**/*",
    "../models/**/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
  | lightning_logs
  | lightning_logs_bak
  | temp
)/
'''

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503"]
exclude = [
    ".git",
    "__pycache__",
    "build",
    "dist",
    "lightning_logs",
    "lightning_logs_bak", 
    "temp",
]